// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Should render a Modal 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  width: 30px;
  height: 30px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #666666;
}

.c5 svg g,
.c5 svg p {
  fill: #666666;
}

.c0 {
  z-index: 201;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  position: fixed;
  overflow-y: auto;
}

.c1 {
  position: fixed;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c2 {
  background: #FFFFFF;
  border-radius: 0;
  box-sizing: border-box;
  z-index: 101;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  overflow-y: hidden;
  position: absolute;
  top: 0;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.c8 img {
  max-width: 100%;
}

.c7 {
  padding: 0 16px 16px 16px;
  max-width: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  min-height: 24px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0;
  z-index: 1;
  outline: none;
  background: none;
  border: none;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:512px) {
  .c1 {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
}

@media (min-width:512px) {
  .c2 {
    top: 48px;
    -webkit-transform: translate(-50%);
    -ms-transform: translate(-50%);
    transform: translate(-50%);
    margin-bottom: 64px;
    left: 50%;
    display: block;
    padding: 32px 24px;
    border-radius: 4px;
    height: auto;
    max-width: 756px;
  }
}

@media (min-width:512px) {
  .c7 {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    padding: 0;
  }
}

@media (min-width:512px) {
  .c3 {
    padding: 0 0 0 0;
    min-height: 0;
  }
}

<div
  className="c0"
  id="saiyan-styled-modal-wrapper"
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <div
    className="c2"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5 c6"
        color="grey5"
        height={30}
        onClick={[Function]}
        width={30}
      >
        <svg
          data-test="modal-close-button"
          height={18}
          width={18}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.397 9.02l7.374-7.519A.871.871 0 0016.53.282L9.166 7.79 1.502.27a.87.87 0 10-1.22 1.243l7.653 7.508-7.653 7.507a.871.871 0 001.22 1.243l7.664-7.52 7.363 7.508a.87.87 0 001.242-1.219l-7.374-7.52z"
            fill="#999"
          />
        </svg>
      </div>
    </div>
    <div
      className="c7"
      id="saiyan-styled-modal-desktop-wrapper"
    >
      <div
        className="c8"
      >
        Modal
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Should render a Modal with size 1`] = `
.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 svg {
  width: 30px;
  height: 30px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #666666;
}

.c5 svg g,
.c5 svg p {
  fill: #666666;
}

.c0 {
  z-index: 201;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  position: fixed;
  overflow-y: auto;
}

.c1 {
  position: fixed;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c2 {
  background: #FFFFFF;
  border-radius: 0;
  box-sizing: border-box;
  z-index: 101;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  overflow-y: hidden;
  position: absolute;
  top: 0;
}

.c8 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.c8 img {
  max-width: 100%;
}

.c7 {
  padding: 0 16px 16px 16px;
  max-width: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  min-height: 24px;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0;
  z-index: 1;
  outline: none;
  background: none;
  border: none;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (min-width:512px) {
  .c1 {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
}

@media (min-width:512px) {
  .c2 {
    top: 48px;
    -webkit-transform: translate(-50%);
    -ms-transform: translate(-50%);
    transform: translate(-50%);
    margin-bottom: 64px;
    left: 50%;
    display: block;
    padding: 32px 24px;
    border-radius: 4px;
    height: auto;
    max-width: 756px;
  }
}

@media (min-width:512px) {
  .c7 {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    padding: 0;
  }
}

@media (min-width:512px) {
  .c3 {
    padding: 0 0 0 0;
    min-height: 0;
  }
}

<div
  className="c0"
  id="saiyan-styled-modal-wrapper"
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <div
    className="c2"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5 c6"
        color="grey5"
        height={30}
        onClick={[Function]}
        width={30}
      >
        <svg
          data-test="modal-close-button"
          height={18}
          width={18}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.397 9.02l7.374-7.519A.871.871 0 0016.53.282L9.166 7.79 1.502.27a.87.87 0 10-1.22 1.243l7.653 7.508-7.653 7.507a.871.871 0 001.22 1.243l7.664-7.52 7.363 7.508a.87.87 0 001.242-1.219l-7.374-7.52z"
            fill="#999"
          />
        </svg>
      </div>
    </div>
    <div
      className="c7"
      id="saiyan-styled-modal-desktop-wrapper"
    >
      <div
        className="c8"
      >
        Modal
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Should render a Modal with two buttons 1`] = `
.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 svg {
  width: 30px;
  height: 30px;
  -webkit-transform: rotate(0deg);
  -ms-transform: rotate(0deg);
  transform: rotate(0deg);
  fill: #666666;
}

.c6 svg g,
.c6 svg p {
  fill: #666666;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #FFFFFF;
  border: 2px solid #666666;
  color: #666666;
}

.c12 .c5 {
  padding: 0 8px;
}

.c12 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c12:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c12 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  box-sizing: border-box;
  outline: none;
  cursor: pointer;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-appearance: none;
  padding: 12px 24px;
  position: relative;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: OswaldLight,Arial,sans-serif;
  font-weight: normal;
  font-size: 16px;
  height: 48px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  box-shadow: none;
  background: #00C8DC;
  border: 2px solid #00C8DC;
  color: #FFFFFF;
  color: #FFFFFF;
}

.c15 .c5 {
  padding: 0 8px;
}

.c15 .Status-y46az8-0 {
  position: absolute;
  top: -6px;
  right: -6px;
}

.c15:hover {
  box-shadow: 0 8px 10px 1px rgba(0,0,0,0.07),0 3px 14px 2px rgba(0,0,0,0.06),0 5px 5px -3px rgba(0,0,0,0.10);
}

.c15 > span {
  color: inherit;
  display: block;
  text-align: center;
  width: 100%;
}

.c10 {
  border-top: 1px solid #E5E5E5;
  padding-top: 32px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c14 {
  text-align: right;
  margin: 0 24px;
}

.c11 margin:0 24px @media (max-width:512px) {
  margin-top: 16px;
  margin-right: 0;
}

.c13 {
  width: 100%;
  margin: 0 auto;
  max-width: 400px;
}

.c0 {
  z-index: 201;
  top: 0;
  bottom: 0;
  right: 0;
  left: 0;
  position: fixed;
  overflow-y: auto;
}

.c1 {
  position: fixed;
  position: -webkit-sticky;
  position: sticky;
  right: 0;
  bottom: 0;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c2 {
  background: #FFFFFF;
  border-radius: 0;
  box-sizing: border-box;
  z-index: 101;
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
  overflow-y: hidden;
  position: absolute;
  top: 0;
}

.c9 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: column;
  -ms-flex-flow: column;
  flex-flow: column;
}

.c9 img {
  max-width: 100%;
}

.c8 {
  padding: 0 16px 16px 16px;
  max-width: 100%;
  overflow-y: scroll;
  -webkit-overflow-scrolling: touch;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 16px;
  min-height: 24px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  padding: 0;
  z-index: 1;
  outline: none;
  background: none;
  border: none;
}

.c4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

@media (max-width:512px) {
  .c10 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
  }
}

@media (max-width:512px) {
  .c13 {
    width: 100%;
  }
}

@media (min-width:512px) {
  .c1 {
    overflow: auto;
    -webkit-overflow-scrolling: touch;
  }
}

@media (min-width:512px) {
  .c2 {
    top: 48px;
    -webkit-transform: translate(-50%);
    -ms-transform: translate(-50%);
    transform: translate(-50%);
    margin-bottom: 64px;
    left: 50%;
    display: block;
    padding: 32px 24px;
    border-radius: 4px;
    height: auto;
    max-width: 756px;
  }
}

@media (min-width:512px) {
  .c8 {
    overflow-y: scroll;
    -webkit-overflow-scrolling: touch;
    padding: 0;
  }
}

@media (min-width:512px) {
  .c3 {
    padding: 0 0 0 0;
    min-height: 0;
  }
}

<div
  className="c0"
  id="saiyan-styled-modal-wrapper"
>
  <div
    className="c1"
    onClick={[Function]}
  />
  <div
    className="c2"
    onClick={[Function]}
    size="lg"
  >
    <div
      className="c3"
    >
      <div
        className="c4"
      />
      <div
        className="c5 c6 c7"
        color="grey5"
        height={30}
        onClick={[Function]}
        width={30}
      >
        <svg
          data-test="modal-close-button"
          height={18}
          width={18}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.397 9.02l7.374-7.519A.871.871 0 0016.53.282L9.166 7.79 1.502.27a.87.87 0 10-1.22 1.243l7.653 7.508-7.653 7.507a.871.871 0 001.22 1.243l7.664-7.52 7.363 7.508a.87.87 0 001.242-1.219l-7.374-7.52z"
            fill="#999"
          />
        </svg>
      </div>
    </div>
    <div
      className="c8"
      id="saiyan-styled-modal-desktop-wrapper"
    >
      <div
        className="c9"
      >
        Modal
      </div>
      <div
        className="c10"
        data-test="saiyan-modal-footer-buttons"
      >
        <div
          className="c11"
        >
          <button
            className="c12 c13"
            data-test="saiyan-secondary-modal-footer-buttons"
            disabled={false}
            onClick={[Function]}
            size="md"
            type="button"
          >
            Schließen
          </button>
        </div>
        <div
          className="c14"
        >
          <button
            className="c15 c13"
            data-test="saiyan-primary-modal-footer-buttons"
            disabled={false}
            onClick={[Function]}
            size="md"
            type="button"
          >
            Call to action
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
